--- a/Paper.html
+++ b/Paper.html
@@ -1,8 +1,8 @@
 <html>
 <title>Chivhane Family</title>
-<h1>Asmita</h1>
-<h2>Asmita</h2>
-<h3>Asmita</h3>
-<h4>Asmita</h4>
+<h1>Kiran</h1>
+<h2>Hema</h2>
+<h3>Divya</h3>
+<h4>Shubham</h4>
 <h5>Asmita</h5>
 </html>
